Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Completion__c/Completion__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Employees and Assignments, tracking results.</description>
    <label>Completion</label>
    <nameField>
        <label>Completion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>