Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Completion__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Completions</relationshipLabel>
    <relationshipName>Completions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>