Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Completion__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Completions</relationshipLabel>
    <relationshipName>Completions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>