Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Completion__c/validationRules/must_reference_Employee_and_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>must_reference_Employee_and_Assignment</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Assignment__c),
  ISBLANK(Employee__c)
)</errorConditionFormula>
    <errorMessage>Completion must be linked to both an Employee and an Assignment.</errorMessage>
</ValidationRule>